--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@ body {
 </style>
 
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<!--<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div>
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -51,9 +51,9 @@ body {
 			<a class="navbar-brand" href="#">Unge Pirater</a>
 		</div>
 		<div class="navbar-collapse collapse">
-		</div><!--/.navbar-collapse -->
+		</div>
 	</div>
-</div>
+</div>-->
 
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
