--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@ body {
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">Unge Pirater</a>
+			<a class="navbar-brand" href="#"><img src="sdgdfgdfgdfsgs" alt="Unge Pirater"></a>
 		</div>
 		<div class="navbar-collapse collapse">
 		</div>
