set max img in navbar-brand height to 50px

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@ body {
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#"><img class="img-responsive" src="//static.ungepirater.no/img/logo/uPIR_Logo.svg" alt="Unge Pirater"></a>
+			<a class="navbar-brand" href="#"><img max-height="50px" class="img-responsive" src="//static.ungepirater.no/img/logo/uPIR_Logo.svg" alt="Unge Pirater"></a>
 		</div>
 		<div class="navbar-collapse collapse">
 		</div>
