--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@ body {
 </style>
 
 
-<div class="navbar navbar-fixed-top" role="navigation">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div>
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -48,7 +48,7 @@ body {
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#"><img class="img-responsive" style="max-height:43px; max-width:100px; margin-top: -7px;" src="//static.ungepirater.no/img/logo/uPIR_Logo.svg" alt="Unge Pirater"></a>
+			<a class="navbar-brand" href="#"><img class="img-responsive" style="max-height:53px; max-width:100px; margin-top: -7px;" src="//static.ungepirater.no/img/logo/uPIR_Flagg.svg" alt="Unge Pirater"></a>
 		</div>
 		<div class="navbar-collapse collapse">
 		</div>
