--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@ body {
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#"><img class="img-responsive" style="max-height:53px; max-width:100px; margin-top: -7px;" src="//static.ungepirater.no/img/logo/uPIR_Flagg.svg" alt="Unge Pirater"></a>
+			<a class="navbar-brand" href="#"><img class="img-responsive" style="max-height:60px; margin-top: -5px;" src="//static.ungepirater.no/img/logo/uPIR_Flagg.svg" alt="Unge Pirater"></a>
 		</div>
 		<div class="navbar-collapse collapse">
 		</div>
