--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@ body {
 	height: 60px;
 	background-color: #f5f5f5;
 }
-.navbar-inner {
+.navbar-inverse {
 	background-color: #ff8800; /*#2c2c2c  fallback color, place your own */
 
 	/* Gradients for modern browsers, replace as you see fit */
@@ -63,7 +63,7 @@ body {
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#"><img class="img-responsive" style="max-height:60px; margin-top: -5px;" src="//static.ungepirater.no/img/logo/uPIR_Flagg.svg" alt="Ungepirater"></a>
+			<a class="navbar-brand" href="#"><img class="img-responsive" style="max-height:40px; margin-top: -5px;" src="//static.ungepirater.no/img/logo/uPIR_Flagg.svg" alt="Ungepirater"></a>
 		</div>
 		<div class="navbar-collapse collapse">
 		</div>
