--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,19 +37,7 @@ body {
 	background-color: #f5f5f5;
 }
 .navbar-inverse {
-	background-color: #ff8800; /*#2c2c2c  fallback color, place your own */
-
-	/* Gradients for modern browsers, replace as you see fit */
-	background-image: -moz-linear-gradient(top, #333333, #222222);
-	background-image: -ms-linear-gradient(top, #333333, #222222);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
-	background-image: -webkit-linear-gradient(top, #333333, #222222);
-	background-image: -o-linear-gradient(top, #333333, #222222);
-	background-image: linear-gradient(top, #333333, #222222);
-	background-repeat: repeat-x;
-
-	/* IE8-9 gradient filter */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);
+	background-color: #ff8800;
 }
 </style>
 
@@ -63,7 +51,7 @@ body {
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#"><img class="img-responsive" style="max-height:40px; margin-top: -5px;" src="//static.ungepirater.no/img/logo/uPIR_Flagg.svg" alt="Ungepirater"></a>
+			<a class="navbar-brand" href="#"><img class="img-responsive" style="max-height:53px; margin-top: -7px;" src="//static.ungepirater.no/img/logo/uPIR_Flagg.svg" alt="Ungepirater"></a>
 		</div>
 		<div class="navbar-collapse collapse">
 		</div>
