--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,27 +73,32 @@ body {
 
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
-	<div>
-		<h1>Unge Pirater</h1>
-		<p> Dette er en testside for Unge Pirater </p>
-		<div class="row">
-			<div class="col-md-2 col-sm-4 col-sx-6">
-				<button type="button" class="btn btn-default btn-lg btn-block">Block level button</button>
-			</div>
-			<div class="col-md-2 col-sm-4 col-sx-6">
-				<button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
-			</div>
-			<div class="col-md-2 col-sm-4 col-sx-6">
-				<button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
-			</div>
-			<div class="col-md-2 col-sm-4 col-sx-6">
-				<button type="button" class="btn btn-info btn-lg btn-block">Block level button</button>
-			</div>
-			<div class="col-md-2 col-sm-4 col-sx-6">
-				<button type="button" class="btn btn-warning btn-lg btn-block">Block level button</button>
-			</div>
-			<div class="col-md-2 col-sm-4 col-sx-6">
-				<button type="button" class="btn btn-danger btn-lg btn-block">Block level button</button>
+	<div class="row">
+		<div class="col-md-3">
+		<img class="img-responsive" src="//static.ungepirater.no/img/logo/uPIR_Flagg.svg" alt="">
+		</div>
+		<div class="col-md-9">
+			<h1>Unge Pirater</h1>
+			<p> Dette er en testside for Unge Pirater </p>
+			<div class="row">
+				<div class="col-md-2 col-sm-4 col-sx-6">
+					<button type="button" class="btn btn-default btn-lg btn-block">Block level button</button>
+				</div>
+				<div class="col-md-2 col-sm-4 col-sx-6">
+					<button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+				</div>
+				<div class="col-md-2 col-sm-4 col-sx-6">
+					<button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
+				</div>
+				<div class="col-md-2 col-sm-4 col-sx-6">
+					<button type="button" class="btn btn-info btn-lg btn-block">Block level button</button>
+				</div>
+				<div class="col-md-2 col-sm-4 col-sx-6">
+					<button type="button" class="btn btn-warning btn-lg btn-block">Block level button</button>
+				</div>
+				<div class="col-md-2 col-sm-4 col-sx-6">
+					<button type="button" class="btn btn-danger btn-lg btn-block">Block level button</button>
+				</div>
 			</div>
 		</div>
 	</div>
