Main jumbotron changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,29 +16,29 @@
 	}
 
 
-html {
-	position: relative;
-	min-height: 100%;
-}
+	html {
+		position: relative;
+		min-height: 100%;
+	}
 
-body {
-	margin-top: 50px;
-	/* Margin bottom by footer height */
-	margin-bottom: 60px;
-}
+	body {
+		margin-top: 50px;
+		/* Margin bottom by footer height */
+		margin-bottom: 60px;
+	}
 
-.jumbotron {
-	margin-left: 0px;
-}
-#footer {
-	position: absolute;
-	text-indent: 25px;
-	bottom: 0;
-	width: 100%;
-	/* Set the fixed height of the footer here */
-	height: 60px;
-	background-color: #f5f5f5;
-}
+	.jumbotron {
+		margin-left: 0px;
+	}
+	#footer {
+		position: absolute;
+		text-indent: 25px;
+		bottom: 0;
+		width: 100%;
+		/* Set the fixed height of the footer here */
+		height: 60px;
+		background-color: #f5f5f5;
+	}
 </style>
 
 
@@ -55,7 +55,7 @@ body {
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Link</a></li>
+				<li class="active"><a href="#">Ungepirater</a></li>
 				<li><a href="#">Link</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
@@ -77,33 +77,33 @@ body {
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
 	<div class="row">
-		<div class="col-md-3">
-			<img class="img-responsive" src="//static.ungepirater.no/img/logo/uPIR_Flagg.svg" alt="">
+		<div class="col-md-4">
+			<img class="img-responsive" src="//static.ungepirater.no/img/logo/uPIR_Logo.svg" alt="">
 		</div>
-		<div class="col-md-9">
-			<h1>Unge Pirater</h1>
+		<div class="col-md-8">
 			<p> Dette er en testside for Unge Pirater </p>
 			
 		</div>
-		<div class="row">
-			<div class="col-md-2 col-sm-4 col-sx-6">
-				<button type="button" class="btn btn-default btn-lg btn-block">Block level button</button>
-			</div>
-			<div class="col-md-2 col-sm-4 col-sx-6">
-				<button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
-			</div>
-			<div class="col-md-2 col-sm-4 col-sx-6">
-				<button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
-			</div>
-			<div class="col-md-2 col-sm-4 col-sx-6">
-				<button type="button" class="btn btn-info btn-lg btn-block">Block level button</button>
-			</div>
-			<div class="col-md-2 col-sm-4 col-sx-6">
-				<button type="button" class="btn btn-warning btn-lg btn-block">Block level button</button>
-			</div>
-			<div class="col-md-2 col-sm-4 col-sx-6">
-				<button type="button" class="btn btn-danger btn-lg btn-block">Block level button</button>
-			</div>
+
+	</div>
+	<div class="row">
+		<div class="col-md-2 col-sm-4 col-sx-6">
+			<button type="button" class="btn btn-default btn-lg btn-block">Block level button</button>
+		</div>
+		<div class="col-md-2 col-sm-4 col-sx-6">
+			<button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+		</div>
+		<div class="col-md-2 col-sm-4 col-sx-6">
+			<button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
+		</div>
+		<div class="col-md-2 col-sm-4 col-sx-6">
+			<button type="button" class="btn btn-info btn-lg btn-block">Block level button</button>
+		</div>
+		<div class="col-md-2 col-sm-4 col-sx-6">
+			<button type="button" class="btn btn-warning btn-lg btn-block">Block level button</button>
+		</div>
+		<div class="col-md-2 col-sm-4 col-sx-6">
+			<button type="button" class="btn btn-danger btn-lg btn-block">Block level button</button>
 		</div>
 	</div>
 </div>
