--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,7 @@
 	<style type="text/css">
 		/* Move down content because we have a fixed navbar that is 50px tall */
 		body {
+			padding-top: 50px;
 			padding-bottom: 20px;
 		}
 	</style>
@@ -20,13 +21,13 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
+
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="//static.ungepirater.no/components/jquery/dist/jquery.min.js"></script>
+      <!-- Include all compiled plugins (below), or include individual files as needed -->
+      <script src="//static.ungepirater.no/components/bootstrap/dist/js/bootstrap.min.js"></script>
   </head>
   <body>
   	<%- body %>
-
-  	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  	<script src="//static.ungepirater.no/components/jquery/dist/jquery.min.js"></script>
-  	<!-- Include all compiled plugins (below), or include individual files as needed -->
-  	<script src="//static.ungepirater.no/components/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
   </html>
