Made some changes to the twitter carousel

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,6 @@
 	}
 
 	body {
-		margin-top: 50px;
 		/* Margin bottom by footer height */
 		margin-bottom: 60px;
 	}
@@ -121,14 +120,14 @@
   		margin-bottom: 0;
   		padding: 0 40px 30px 40px;
   	}
-  	
+
   }
 
   /* Small devices (tablets, up to 768px) */
   @media (max-width: 768px) { 
-  	
+
   	/* Make the indicators larger for easier clicking with fingers/thumb on mobile */
-  	
+
   	#quote-carousel .carousel-indicators {
   		bottom: -20px !important;  
   	}
@@ -187,13 +186,8 @@
 		</div>
 		<div class="col-md-8">
 			<div class="container">
-				<div class="row">
-					<div class='col-md-offset-2 col-md-8 text-center'>
-						<h2>Responsive Quote Carousel BS3</h2>
-					</div>
-				</div>
 				<div class='row'>
-					<div class='col-md-offset-2 col-md-8'>
+					<div class='col-md-12'>
 						<div class="carousel slide" data-ride="carousel" id="quote-carousel">
 							<!-- Bottom Carousel Indicators -->
 							<ol class="carousel-indicators">
