removed class active from "ungepirater" in navbar and installed fontawesome

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,7 @@
 
 	<!-- Bootstrap -->
 	<link href="//static.ungepirater.no/components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="//static.ungepirater.no/components/fontawesome/css/font-awesome.min.css" rel="stylesheet">
 	<style type="text/css">
 		/* Move down content because we have a fixed navbar that is 50px tall */
 		body {
