--- a/views/index.ejs
+++ b/views/index.ejs
@@ -159,7 +159,7 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Ungepirater</a></li>
+				<li><a href="#">Ungepirater</a></li>
 				<li><a href="#">Link</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
