removed img's from twitter carousel.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,20 +84,10 @@
 	{
 		background: #333333;
 	}
-	#quote-carousel img
-	{
-		width: 250px;
-		height: 100px
-	}
-	/* End carousel */
 
 	.item blockquote {
 		border-left: none; 
 		margin: 0;
-	}
-
-	.item blockquote img {
-		margin-bottom: 10px;
 	}
 
 	.item blockquote p:before {
@@ -202,10 +192,7 @@
 								<div class="item active">
 									<blockquote>
 										<div class="row">
-											<div class="col-sm-3 text-center">
-												<img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" style="width: 100px;height:100px;">
-											</div>
-											<div class="col-sm-9">
+											<div class="col-sm-12">
 												<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!</p>
 												<small>Someone famous</small>
 											</div>
@@ -216,10 +203,7 @@
 								<div class="item">
 									<blockquote>
 										<div class="row">
-											<div class="col-sm-3 text-center">
-												<img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/mijustin/128.jpg" style="width: 100px;height:100px;">
-											</div>
-											<div class="col-sm-9">
+											<div class="col-sm-12">
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p>
 												<small>Someone famous</small>
 											</div>
@@ -230,11 +214,8 @@
 								<div class="item">
 									<blockquote>
 										<div class="row">
-											<div class="col-sm-3 text-center">
-												<img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/keizgoesboom/128.jpg" style="width: 100px;height:100px;">
-											</div>
-											<div class="col-sm-9">
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget pretium nisl accumsan. Sed ultricies commodo tortor, eu pretium mauris.</p>
+											<div class="col-sm-12">
+												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget pretium nisl accumsan pretium nisl accumsan.</p>
 												<small>Someone famous</small>
 											</div>
 										</div>
