made some changes to the carousel again..

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -193,8 +193,8 @@
 									<blockquote>
 										<div class="row">
 											<div class="col-sm-12">
-												<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!</p>
-												<small>Someone famous</small>
+												<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!<small>Someone famous</small></p>
+												
 											</div>
 										</div>
 									</blockquote>
@@ -204,8 +204,8 @@
 									<blockquote>
 										<div class="row">
 											<div class="col-sm-12">
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p>
-												<small>Someone famous</small>
+												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.<small>Someone famous</small></p>
+												
 											</div>
 										</div>
 									</blockquote>
@@ -215,8 +215,7 @@
 									<blockquote>
 										<div class="row">
 											<div class="col-sm-12">
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget pretium nisl accumsan pretium nisl accumsan.</p>
-												<small>Someone famous</small>
+												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget pretium nisl accumsan pretium nisl accumsan.<small>Someone famous</small></p>
 											</div>
 										</div>
 									</blockquote>
