font size changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,6 +75,10 @@
 		margin: 0;
 	}
 
+	.item blockquote p {
+		font-size: 8px;
+	}
+
 	.item blockquote p:before {
 		content: "\f10d";
 		font-family: 'Fontawesome';
