added text-center to jumbotron

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -158,7 +158,7 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-4 text-center">
 			<img class="img-responsive" src="//static.ungepirater.no/img/logo/uPIR_Logo.svg" alt="">
 		</div>
 		<div class="col-md-8">
