--- a/views/index.ejs
+++ b/views/index.ejs
@@ -258,7 +258,7 @@
 	</div>
 
 	<div class="row">
-		<h2><i class="fa fa-lg fa-globe"></i>Pirater og piratsaker rundt omkring</h2>
+		<h2><i class="fa fa-globe fa-6"></i> Pirater og piratsaker rundt omkring</h2>
 		<hr />
 		<div class="col-md-4">
 			<h2>Heading</h2>
