--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,19 @@
 	/* Move down content because we have a fixed navbar that is 50px tall */
 	body {
 		padding-bottom: 20px;
+		background-color: #ff8800;
 	}
+
 	html {
 
 	}
 	.row {
 		margin-right: 5px;
 		margin-left: 5px;
+	}
+
+	#news {
+		background-color: white;
 	}
 
 	.jumbotron {
@@ -239,7 +245,7 @@
 	</div>
 </div>
 
-<div class="">
+<div id="news">
 	<div class="row">
 		<h2> Piratnytt</h2>
 		<hr />
