--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,8 @@
 	}
 
 	.news-header {
-		padding-left: -10px;
-		padding-right: -10px;
+		background: #ff7700;
+		border-bottom: 10px;
 	}
 	.jumbotron {
 		padding-top: 10px;
