made a css reset on .news-header

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,12 @@
 	}
 
 	.news-header {
-		background: #ff7700;
-		border-bottom: 10px;
+		padding-top: 0;
+		margin-top: 0;
+		border-top: 0;
+		padding-bottom: 0;
+		margin-bottom: 0;
+		border-bottom: 0;
 	}
 	.jumbotron {
 		padding-top: 10px;
