--- a/views/index.ejs
+++ b/views/index.ejs
@@ -253,7 +253,7 @@
 	</div>
 </div>
 
-<div id="news" class="container">
+<div id="news">
 	<div class="row">
 		<div class="news-header">
 			<h2> Piratnytt</h2>
