--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,6 +27,12 @@
       <script src="//static.ungepirater.no/components/jquery/dist/jquery.min.js"></script>
       <!-- Include all compiled plugins (below), or include individual files as needed -->
       <script src="//static.ungepirater.no/components/bootstrap/dist/js/bootstrap.min.js"></script>
+      <script src="//static.ungepirater.no/components/konami-js/konami.js"></script>
+      <script type="text/javascript">
+      	(function(){
+      		var easter_egg = new Konami(function() { alert('Konami code!')});
+      	});
+      </script>
   </head>
   <body>
   	<%- body %>
