--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,7 +29,7 @@
       <script src="//static.ungepirater.no/components/bootstrap/dist/js/bootstrap.min.js"></script>
       <script src="//static.ungepirater.no/components/konami-js/konami.js"></script>
       <script type="text/javascript">
-      	(function(){
+      	$( document ).ready(function() {
       		var easter_egg = new Konami(function() { alert('Konami code!')});
       	});
       </script>
