--- a/public/konami.css
+++ b/public/konami.css
@@ -7,6 +7,11 @@
 }	
 * {margin: 0; padding: 0;}
 html, body {width: 100%; height: 100%; text-align: center; overflow: hidden;}
+body {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
 canvas {display: block; width: 100%; height: 100%; background: #000; overflow: hidden;}
 #game {width: 100%; height: 100%; overflow: hidden; position: relative;}	
 ol li {list-style-position: inside; line-height: 1.5em;}	
