--- a/public/konami.css
+++ b/public/konami.css
@@ -16,7 +16,7 @@ canvas {display: block; width: 100%; height: 100%; background: #000; overflow: h
 #game {width: 100%; height: 100%; overflow: hidden; position: relative;}	
 ol li {list-style-position: inside; line-height: 1.5em;}	
 p {font-family: 'Press Start 2P', cursive;}
-p.text {display: block; color: #fff; font-family: 'Press Start 2P', cursive; font-weight: normal; font-size: 1.3em; text-transform: uppercase; padding: 0; margin: 0;}
+p.text {display: block; color: #ff8800; font-family: 'Press Start 2P', cursive; font-weight: normal; font-size: 1.3em; text-transform: uppercase; padding: 0; margin: 0;}
 p.menuText {line-height: 2em;}
 p.instructionsText {padding-bottom: 0.5em;}	
 p.scoreText {padding-bottom: 1em;}
